--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 .lightOn{display:none;}
 </style>
  <title>jquery</title>
- <script src="js/jquery-1.12.4.js" ></script>
+ <script src="jquery-1.12.4.js" ></script>
  <script>
     $(document).ready(function(){
 	  $('.lightOff').click(function(){
